Fix supporters list rendering on mobile

--- a/skins/laika/src/scss/custom.scss
+++ b/skins/laika/src/scss/custom.scss
@@ -101,7 +101,6 @@
 	}
 	&-heading {
 		border-bottom: 2px solid $fun-color-gray-light-transparency;
-		margin-left: 1.1rem;
 		cursor: pointer;
 	}
 	&-content {
